use platform native library loading; make go client importable
squashed changes:
- Use platform native library loading (ebb6e25)
- Add local Maven proof packaging (84e8e88)
- Add Odin C ABI smoke client (d6d5a4d)
- Add JVM package smoke script (a09b575)
- Add Python bundled native load proof (7297864)
- Add Node bundled native load proof (7ff43a6)
- Document host package proof status (a864c8f)
- Move Rust link setup into build script (f94c97a)
- Document package smoke entry points (fee6100)
- Make Go client importable (9271423)