@@ -17,7 +17,7 @@ library itself:
 {:deps {dev.vevdb/vev-clj {:mvn/version "0.1.0"}}}
 ```
 
-Application code should not pass Java paths or `libvev.dylib` around:
+Application code should not pass Java paths or native library paths around:
 
 ```clojure
 (require '[vev.core :as d])
@@ -68,14 +68,26 @@ scripts/package_jvm.sh
 ```
 
 `scripts/package_jvm.sh` builds local Java, native-resource, and Clojure jars
-under `build/jvm`. They are proof artifacts for the eventual deps.edn/Maven
-path, not a published release.
+under `build/jvm` and a local Maven-style repository under `build/m2`. They are
+proof artifacts for the eventual deps.edn/Maven path, not a published release.
+
+That local repository can be consumed from a separate test project:
+
+```clojure
+{:mvn/local-repo "/path/to/vev/build/m2"
+ :deps {dev.vevdb/vev-clj {:mvn/version "0.1.0-SNAPSHOT"}}
+ :aliases {:run {:jvm-opts ["--enable-preview"
+                            "--enable-native-access=ALL-UNNAMED"]}}}
+```
+
+`scripts/smoke_jvm_package.sh` builds the local artifacts and verifies this
+shape from a temporary deps.edn project.
 
 When developing from the repo root, the root `:clj-dev` alias adds the locally
 built Java classes and the required JVM flags:
 
 ```sh
-VEV_LIB=build/lib/libvev.dylib clojure -M:clj-dev
+clojure -M:clj-dev
 ```
 
 Then open `examples/clojure/getting_started.clj` and evaluate the forms inside
